ops/deploy/staging/api/grafana-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer

spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - staging-grafana.311crimemap.com

    #
    # NB: tls secret persists without running cert manager / issuer containers
    # containers only used for validation (initial, renewal) of cert.
    #
    # once validated cert is dumped (encoded) into secret.
    # cert is tied to secret, not container lifecycle.
    #
    secretName: grafana-311crimemap-com-tls
  rules:
    - host: staging-grafana.311crimemap.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80
    #
    # NB: don't necessarily want to expose this publicly, but config is shown
    #
    # - host: staging-prometheus.311crimemap.com
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: prometheus-kube-prometheus-prometheus
    #             port:
    #               number: 9090
